fix spacing issue ul ol

--- a/asset/revamp/styles/scss/components/_content.scss
+++ b/asset/revamp/styles/scss/components/_content.scss
@@ -416,6 +416,11 @@
         p {
           font-size: 1.1rem;
           // line-height: normal;
+          br {
+            content: "" !important;
+            display: block !important;
+            margin-bottom: 5px !important;
+          }
         }
 
         a {
